--- a/TeamsGroupCalendar/TabPackage/manifest.json
+++ b/TeamsGroupCalendar/TabPackage/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "$schema": "https://statics.teams.microsoft.com/sdk/v1.2/manifest/MicrosoftTeams.schema.json", 
   "manifestVersion": "1.3",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "id": "d26fce50-6f35-4267-9000-ee8d2d275153",
   "packageName": "TeamsGroupCalendar.io.github.joeio",
   "developer": {
@@ -11,8 +11,8 @@
     "termsOfUseUrl": "https://joeio.github.io/TeamsGroupCalendar/app/todo.html"
   },
   "name": {
-    "short": "Group Calendar",
-    "full": "Group Calendar"
+    "short": "Team Calendar",
+    "full": "Team Calendar"
   },
   "description": {
     "short": "Tab for displaying an Group Calendar in Javascript Calendar Control",
